# indico-plugins

./: .coveragerc  .editorconfig  .eslintrc.js  .flake8  .gitattributes  .gitignore  .header.yaml  .isort.cfg  .travis.yml  CHANGELOG.rst  README.md  README.rst  SphinxMakefile  babel-js.cfg  babel.cfg  docker-compose.yml  hatch_build.py  headers.yml  manage-i18n.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run-tests.sh  setup.cfg  setup.py  sphinx-conf.py  tox.ini  tsconfig.json  update-meta.py  url_map.json  webpack-build-config.json  zizmor.yml
_meta/: README.md  extras.yaml  meta.yaml  pyproject.toml  setup.cfg  setup.py
ai_summary/: README.md  pyproject.toml
ai_summary/indico_ai_summary/: blueprint.py  controllers.py  llm_interface.py  plugin.py  schemas.py  utils.py  views.py
ai_summary/indico_ai_summary/client/: CategoryManagePrompts.jsx  i18n.js  ind_summarize_button.js  index.js
ai_summary/indico_ai_summary/migrations/: 20250904_1208_e2bf94dfa64a_.py
ai_summary/indico_ai_summary/models/: llm_prompt.py  prompt.py
ai_summary/indico_ai_summary/templates/: manage_category_prompts.html  summarize_button.html
aisummary/: README.md  pyproject.toml
aisummary/indico_aisummary/: blueprint.py  controllers.py  plugin.py  utils.py
aisummary/indico_aisummary/client/: ind_summarize_button.js  ind_summarize_button.module.scss  index.js
citadel/: MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
citadel/indico_citadel/: __init__.py  backend.py  blueprint.py  cli.py  plugin.py  result_schemas.py  result_schemas_test.py  schemas.py  schemas_test.py  search.py  search_test.py  util.py  util_test.py
citadel/indico_citadel/migrations/: 20191010_1337_51e3862bad1d_create_table_searchapp_id_map.py  20210330_1742_0cf18be7ade1_add_mapping_table.py  20210412_1601_0cace13672ef_add_file_column.py  20210413_1608_4bc691fe4007_add_file_column.py
citadel/indico_citadel/models/: id_map.py  search_id_map.py
citadel/indico_citadel/templates/: event_category_warning.html
citadel/indico_citadel/translations/: messages.pot
dummy_search/: setup.cfg  setup.py
dummy_search/indico_dummy_search/: data.py  plugin.py
dummy_search/src/: plugin.py
livesync/: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
livesync/indico_livesync/: __init__.py  base.py  blueprint.py  cli.py  controllers.py  export_schemas.py  export_schemas_test.py  forms.py  handler.py  initial.py  marcxml.py  plugin.py  simplify.py  simplify_test.py  task.py  uploader.py  util.py  views.py  zodbimport.py
livesync/indico_livesync/migrations/: 201410311223_1c2b0e17447d_create_tables.py  201503101351_5a9176bca07d_apply_naming_convention.py  201604081137_2c9618a7a2ea_reference_the_new_objects.py  201607131557_230c086da074_use_foreign_key_for_categories.py  (+8 more)
livesync/tests/: agent_test.py  conftest.py  export_schemas_test.py  queue_test.py  simplify_test.py  uploader_test.py  util_test.py
livesync_debug/: README.md  pyproject.toml  setup.cfg  setup.py
livesync_debug/indico_livesync_debug/: agent.py  backend.py  plugin.py
payment_manual/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
payment_manual/indico_payment_manual/: __init__.py  blueprint.py  controllers.py  placeholders.py  plugin.py
payment_paypal/: .coveragerc  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
payment_paypal/indico_payment_paypal/: __init__.py  blueprint.py  controllers.py  plugin.py  plugin_itemizeCart.py  templatesevent_payment_form_itemizeCart.html  util.py  views.py  zodbimport.py
payment_paypal/tests/: controllers_test.py  paypal_test.py  util_test.py
payment_sixpay/: .flake8  .gitignore  .header.yaml  MANIFEST.in  README.md  build_docs.sh  headers.yml  pyproject.toml  setup.cfg  setup.py
payment_sixpay/docs/: Makefile  conf.py  index.rst
payment_sixpay/indico_payment_sixpay/: __init__.py  blueprint.py  controllers.py  forms.py  plugin.py  util.py
payment_sixpay/indico_sixpay/: __about__.py  __init__.py  blueprint.py  plugin.py  request_handlers.py  utility.py
piwik/: MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
piwik/docs/source/: admin.rst  (+3 more)
piwik/indico_piwik/: __init__.py  controllers.py  forms.py  piwik.py  plugin.py  reports.py  views.py  zodbimport.py
piwik/indico_statistics/: __init__.py  controllers.py  forms.py
previewer_code/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
previewer_code/indico_previewer_code/: __init__.py  plugin.py
previewer_jupyter/: MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
previewer_jupyter/indico_previewer_jupyter/: __init__.py  blueprint.py  controllers.py  cpp_highlighter.py  plugin.py
prometheus/: README.md  pyproject.toml  pytest.ini  setup.cfg
prometheus/indico_prometheus/: __init__.py  blueprint.py  controllers.py  metrics.py  plugin.py  queries.py
prometheus/tests/: endpoint_test.py
recaptcha/: MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  setup.py
recaptcha/indico_recaptcha/: __init__.py  plugin.py
storage_s3/: MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
storage_s3/indico_storage_s3/: __init__.py  blueprint.py  controllers.py  import_event_files.py  migrate.py  plugin.py  storage.py  task.py  test.py  util.py
storage_s3/tests/: plugin_test.py
themes_legacy/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  webpack-bundles.json
themes_legacy/indico_themes_legacy/: plugin.py  themes-legacy.yaml
vc_dummy/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
vc_dummy/indico_vc_dummy/: plugin.py
vc_vidyo/: MANIFEST.in  setup.cfg  setup.py
vc_vidyo/doc/: admin.rst  index.rst  user.rst
vc_vidyo/docs/: Makefile
vc_vidyo/indico_vc_vidyo/: __init__.py  blueprint.py  cli.py  controllers.py  forms.py  http_api.py  plugin.py  task.py  util.py  zodbimport.py
vc_vidyo/tests/: task_test.py
(+783 files in other folders)
