[project]
name = "indico-plugin-hfsummary"
version = "0.1"
description = "A plugin to summarize meeting minutes using Hugging Face"

requires-python = ">=3.9"

[project.entry-points."indico.plugins"]
indico_hfsummary = "indico_hfsummary.plugin:IndicoHFSummaryPlugin"

[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ["indico_hfsummary"]