[flake8]
max-line-length = 80

[bdist_wheel]
universal = 1

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    payment_stripe = indico_payment_stripe.plugin:StripePaymentPlugin
