[metadata]
name = indico-plugins
version = 3.0-dev
description = A meta-package containing the official Indico plugins
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
python_requires = ~=3.9
