[metadata]
name = indico-plugins
version = 3.3-dev
description = A meta-package containing the official Indico plugins
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
zip_safe = false
python_requires = >=3.12.2, <3.13

install_requires =
    indico>=3.3.dev0
# Note: The following block must always be right after the indico requirement
# of install_requires in [options], and at the very end of that block since
# it may also have extras added which are in a separate section.
# BEGIN GENERATED REQUIREMENTS
    indico-plugin-citadel>=3.2.2,<3.3.dev0
    indico-plugin-cloud-captchas>=3.2.1,<3.3.dev0
    indico-plugin-livesync>=3.2.1,<3.3.dev0
    indico-plugin-owncloud>=3.2.2,<3.3.dev0
    indico-plugin-payment-manual>=3.2.1,<3.3.dev0
    indico-plugin-payment-paypal>=3.2.1,<3.3.dev0
    indico-plugin-payment-sixpay>=3.2.1,<3.3.dev0
    indico-plugin-piwik>=3.2.1,<3.3.dev0
    indico-plugin-previewer-code>=3.2.1,<3.3.dev0
    indico-plugin-previewer-jupyter>=3.2.1,<3.3.dev0
    indico-plugin-prometheus>=3.2.1,<3.3.dev0
    indico-plugin-storage-s3>=3.2.2,<3.3.dev0
    indico-plugin-ursh>=3.2.2,<3.3.dev0
    indico-plugin-vc-zoom>=3.2.4,<3.3.dev0
# END GENERATED REQUIREMENTS
