[project]
name = "indico-plugin-ai-summary"
version = "0.1"
description = "A plugin to summarize meeting minutes using a large language model(LLM)"

requires-python = ">=3.9"

[project.entry-points."indico.plugins"]
ai_summary = "indico_ai_summary.plugin:IndicoAISummaryPlugin"

[build-system]
requires = ["hatchling"]
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ["indico_ai_summary"]
