[project]
name = 'indico-plugin-livesync'
description = 'Legacy themes for Indico'
readme = 'README.md'
version = '3.3.4'
license = 'MIT'
authors = [{ name = 'Indico Team', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3']

[project.urls]
GitHub = 'https://github.com/indico/indico-plugins'

[project.entry-points.'indico.plugins']
livesync = 'indico_livesync.plugin:LiveSyncPlugin'

[build-system]
requires = ['hatchling==1.28.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_livesync']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = '../hatch_build.py'
dependencies = ['babel==2.18.0']
