[metadata]
name = indico-plugin-payment-manual
version = 3.2
description = Payment plugin for Indico that can be used for custom payment information/links
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.12
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    payment_manual = indico_payment_manual.plugin:ManualPaymentPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
