[metadata]
name = indico-plugin-payment-sixpay
version = 3.2
description = SIXPay/Saferpay payments for Indico event registration fees
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Max Fischer, Martin Claus and Indico Team (CERN)
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2
    iso4217==1.6.20180829

[options.entry_points]
indico.plugins =
    payment_sixpay = indico_payment_sixpay.plugin:SixpayPaymentPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
