[metadata]
name = indico-plugin-piwik
version = 3.3-dev
description = Piwik integration for global and event-specific statistics in Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0

[options.entry_points]
indico.plugins =
    piwik = indico_piwik.plugin:PiwikPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
