[metadata]
name = indico-plugin-previewer-code
version = 3.0-dev
description = Syntax highlighter for code attachments in Indico
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9
install_requires =
    indico>=3.0.dev0
    Pygments>=2.7.2,<3

[options.entry_points]
indico.plugins =
    previewer_code = indico_previewer_code:CodePreviewerPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
