[project]
name = 'indico-plugin-previewer-jupyter'
description = 'Jupyter notebook rendering for attachments in Indico'
readme = 'README.md'
version = '3.3.1'
license = 'MIT'
authors = [{ name = 'Indico Team', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3', 'nbconvert>=7.16.4,<8']

[project.urls]
GitHub = 'https://github.com/indico/indico-plugins'

[project.entry-points.'indico.plugins']
previewer_jupyter = 'indico_previewer_jupyter:JupyterPreviewerPlugin'

[build-system]
requires = ['hatchling==1.25.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_previewer_jupyter']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = '../hatch_build.py'
dependencies = ['babel==2.16.0']
