[metadata]
name = indico-plugin-previewer-jupyter
version = 3.3-dev
description = Jupyter notebook rendering for attachments in Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0
    nbconvert==6.5.0

[options.entry_points]
indico.plugins =
    previewer_jupyter = indico_previewer_jupyter:JupyterPreviewerPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
