[metadata]
name = indico-plugin-storage-s3
version = 3.3-dev
description = S3 storage backend for Indico
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0
    boto3>=1.20.51,<2.0

[options.entry_points]
indico.plugins =
    storage_s3 = indico_storage_s3.plugin:S3StoragePlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
