[metadata]
name = indico-plugin-themes-legacy
version = 3.0rc1
description = Legacy themes for Indico
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9
install_requires =
    indico>=3.0.dev0

[options.entry_points]
indico.plugins =
    themes_legacy = indico_themes_legacy.plugin:LegacyThemesPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
