[metadata]
name = indico-plugin-vc-vidyo
version = 3.0-dev
description = Vidyo video-conferencing plugin for Indico
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9
install_requires =
    indico>=3.0.dev0
    zeep>=4.0.0,<5

[options.entry_points]
indico.plugins =
    vc_vidyo = indico_vc_vidyo.plugin:VidyoPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
